Feat: Add Many-to-Many Relationship Models and Set Up in DataContext
- Introduce new Models representing entities involved in many-to-many relationships.
- Define the necessary configurations for setting up the many-to-many relationship in the data context.
- Implement the required mappings and configurations to establish proper relationships between entities.
- Update the DataContext to reflect the changes, ensuring the seamless handling of many-to-many associations in the database.

--- a/JourneyJot/JourneyJot.csproj
+++ b/JourneyJot/JourneyJot.csproj
@@ -21,9 +21,17 @@
   <ItemGroup>
     <None Remove="Controllers\" />
     <None Remove="Models\" />
+    <None Remove="Data\" />
+    <None Remove="Intefaces\" />
+    <None Remove="Repository\" />
+    <None Remove="Services\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controllers\" />
     <Folder Include="Models\" />
+    <Folder Include="Data\" />
+    <Folder Include="Intefaces\" />
+    <Folder Include="Repository\" />
+    <Folder Include="Services\" />
   </ItemGroup>
 </Project>
