chore: prepare codebase for database migration and data seeding
- Edit code to accommodate database migration

- Introduce necessary changes for seamless data insertion

- Set up migration scripts for database schema updates

- Enable data seeding to populate the database with initial values

--- a/JourneyJot/appsettings.json
+++ b/JourneyJot/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=journeyjot;Initial Catalog=journeyjot;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "DefaultConnection": "Data Source=SNYC\\SQLEXPRESS;Initial Catalog=journeyjot;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
   "Logging": {
     "LogLevel": {
